--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(is_equal)
 export(is_square)
 export(offdiags)
 export(rename_dim)
+export(render_report)
 export(resample)
 export(scale2unit)
 export(squareform)
