Create melt_mat() and plot_melted_mat()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,7 +14,9 @@ export(fold)
 export(indicator)
 export(is_equal)
 export(is_square)
+export(melt_mat)
 export(offdiags)
+export(plot_melted_mat)
 export(rename_dim)
 export(render_report)
 export(resample)
