Update meta files with changes for atlas funs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,10 +12,14 @@ export(extract_labels)
 export(farout)
 export(fold)
 export(indicator)
+export(is_atlas)
 export(is_equal)
 export(is_square)
+export(load_atlas)
 export(melt_mat)
+export(new_atlas)
 export(offdiags)
+export(parcellate)
 export(plot_melted_mat)
 export(rename_dim)
 export(render_report)
