Add cross-validated RSA functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,8 @@ export(average)
 export(center)
 export(combo_paste)
 export(concat_hemis)
+export(contrast_matrix)
+export(cvdist)
 export(enlist)
 export(extract_data)
 export(extract_labels)
