Add resample_idx function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(print,atlas)
 export(Mode)
 export(Var)
 export(average)
+export(averaging_matrix)
 export(center)
 export(combo_paste)
 export(concat_hemis)
@@ -25,6 +26,7 @@ export(plot_melted_mat)
 export(rename_dim)
 export(render_report)
 export(resample)
+export(resample_idx)
 export(scale2unit)
 export(squareform)
 export(validate_atlas)
