--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,8 @@ export(averaging_matrix)
 export(center)
 export(combo_paste)
 export(concat_hemis)
+export(crcor)
+export(crcor_rcpp)
 export(enlist)
 export(extract_data)
 export(extract_labels)
@@ -30,3 +32,5 @@ export(resample_idx)
 export(scale2unit)
 export(squareform)
 export(validate_atlas)
+importFrom(Rcpp,sourceCpp)
+useDynLib(mfutils, .registration = TRUE)
